--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	compile group: 'javax.mail', name: 'mail', version: '1.4.7'
 	compile group: 'net.java.dev.jna', name: 'jna', version: '4.2.2'
 	compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.4'
+	compile "cglib:cglib:2.2"
 	testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
