--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.gtmetrix.sitespeed'
-version '1.0-SNAPSHOT'
+version '1.1'
 
 apply plugin: 'groovy'
 apply plugin: 'java'
@@ -10,7 +10,6 @@ repositories {
 
 dependencies {
 	compile 'org.codehaus.groovy:groovy-all:2.3.11'
-	compile group: 'joda-time', name: 'joda-time', version: '2.9.4'
 	compile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4-rc-2'
 	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
 	compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
@@ -28,7 +27,7 @@ task fatJar(type: Jar) {
 				'Implementation-Version': version,
 				'Main-Class': 'com.gtmetrix.Main'
 	}
-	baseName = project.name + '-all'
+	baseName = project.name
 	from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 	with jar
 }
